# connect-rust

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yaml
.cargo/: config.toml.example
.changes/unreleased/: Fixed-20260702-090031.yaml
.claude/agents/: rust-code-reviewer.md
.github/workflows/: ci.yml  cla.yaml  publish-crates.yml  release.yml
benches/: profile_server.sh
benches/charts/: generate.py  tables.md
benches/rpc/: Cargo.toml  README.md  buf.gen.yaml  format-results.py
benches/rpc-go/: buf.gen.yaml  go.mod  go.sum  main.go
benches/rpc-go/cmd/fortune/: main.go
benches/rpc-go/proto/: bench.proto
benches/rpc-tonic/: Cargo.toml  build.rs
benches/rpc-tonic/src/: main.rs
benches/rpc/benches/: cross_impl_bench.rs  echo_bloat.rs  filter_handler.rs  rpc_bench.rs
benches/rpc/proto/: bench.proto  bench_noutf8.proto  echo_bloat.proto  filter.proto
benches/rpc/src/: filter.rs  fortune.rs  lib.rs
conformance/: Cargo.toml  buf.gen.yaml  buf.yaml
conformance/config/: client-connect-only.yaml  client-grpc-only.yaml  client-grpc-web-only.yaml  connect-only.yaml  connect-tls.yaml  grpc-only.yaml  grpc-web-only.yaml
conformance/scripts/: download-conformance.sh
conformance/src/: lib.rs
connectrpc/: Cargo.toml
connectrpc-build/: Cargo.toml
connectrpc-build/src/: lib.rs
connectrpc-codegen/: Cargo.toml
connectrpc-codegen/src/: codegen.rs  lib.rs  plugin.rs
connectrpc-health/: Cargo.toml  buf.gen.yaml
connectrpc-health/src/: checker.rs  lib.rs  service.rs  static_checker.rs  status.rs
connectrpc-reflection/: Cargo.toml  buf.gen.yaml
connectrpc-reflection/examples/: reflection_server.rs
connectrpc-reflection/src/: lib.rs  reflector.rs  service.rs
connectrpc/src/: axum.rs  codec.rs  compression.rs  deadline.rs  dispatcher.rs  envelope.rs  error.rs  grpc_status.rs  handler.rs  interceptor.rs  lib.rs  payload.rs  protocol.rs  request.rs  response.rs  router.rs  server.rs  service.rs  spec.rs  stream_message.rs
connectrpc/src/client/: http2.rs  mod.rs
docs/: guide.md
docs/specs/: README.md
examples/bazel/: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
examples/bazel/tools/: BUILD.bazel
examples/eliza/: Cargo.toml  README.md  buf.gen.yaml
examples/eliza/src/: client.rs  eliza.rs  main.rs
examples/middleware/: Cargo.toml  README.md  build.rs
examples/middleware/proto/anthropic/connectrpc/middleware_demo/v1/: secret.proto
examples/middleware/src/: client.rs  server.rs
examples/middleware/tests/: e2e.rs
examples/mtls-identity/src/: lib.rs
examples/multiservice/: Cargo.toml  buf.gen.yaml  reflection-demo.sh  test.sh
examples/multiservice/proto/anthropic/connectrpc/greet/v1/: greet.proto
examples/multiservice/proto/anthropic/connectrpc/math/v1/: math.proto
examples/multiservice/proto/anthropic/connectrpc/wkt/v1/: wkt.proto
examples/multiservice/src/: lib.rs
examples/streaming-tour/: Cargo.toml  README.md  build.rs
examples/streaming-tour/proto/anthropic/connectrpc/tour/v1/: number.proto
examples/streaming-tour/src/: client.rs  server.rs
examples/streaming-tour/tests/: e2e.rs
examples/wasm-client/: Cargo.toml  build.rs  test.sh
examples/wasm-client/src/: lib.rs  transport.rs
examples/wasm-client/tests/: integration.rs
protoc-gen-connect-rust/: Cargo.toml  Dockerfile
protoc-gen-connect-rust/src/: main.rs
signatures/: cla.json
tests/streaming/: Cargo.toml  build.rs
tests/streaming/proto/: echo.proto
tests/streaming/src/: lib.rs
