[package]
name = "connectrpc-health"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC health-checking service for connectrpc (wire-compatible with grpc_health_v1)"
keywords = ["connectrpc", "grpc", "health", "rpc"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
# ConnectRPC runtime. `client` is enabled so downstream users of the
# re-exported `HealthClient` get `HttpClient`/`Http2Connection` without
# having to opt in themselves.
connectrpc = { path = "../connectrpc", version = "0.6", features = ["server", "client"] }

# Protobuf + serde (pulled in by the generated module paths)
buffa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http-body = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

[dev-dependencies]
connectrpc = { path = "../connectrpc", features = ["axum", "client", "server"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["tokio", "http1"] }

[lints]
workspace = true
