[package]
name = "protoc-gen-connect-rust"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protoc plugin for generating ConnectRPC Rust service bindings"
keywords = ["connectrpc", "grpc", "protobuf", "protoc", "plugin"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[[bin]]
name = "protoc-gen-connect-rust"
path = "src/main.rs"

[dependencies]
connectrpc-codegen = { path = "../connectrpc-codegen", version = "0.2" }
buffa = { workspace = true }
buffa-codegen = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
