[package]
name = "multiservice-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "multiservice-server"
path = "src/bin/server.rs"

[[bin]]
name = "multiservice-client"
path = "src/bin/client.rs"

[dependencies]
connectrpc = { path = "../../connectrpc", features = ["server", "axum", "client"] }
# Server reflection (grpc.reflection.v1 + v1alpha); server side only, so
# the generated reflection client is dropped via default-features = false.
connectrpc-reflection = { path = "../../connectrpc-reflection", default-features = false }

# Protobuf. buffa-descriptor backs the generated `descriptor_pool()`
# accessors (reflect_mode=bridge in buf.gen.yaml).
buffa = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-types = { workspace = true }

# Serialization (for generated message types)
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }
http-body = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Web framework
axum = { workspace = true, features = ["tokio", "http1"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
