[package]
name = "streaming-tour-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "streaming-tour-server"
path = "src/server.rs"

[[bin]]
name = "streaming-tour-client"
path = "src/client.rs"

[dependencies]
connectrpc = { path = "../../connectrpc", features = ["axum", "client", "server"] }

# Protobuf
buffa = { workspace = true }
buffa-types = { workspace = true }

# Serialization (for generated message types)
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types (for generated client bounds)
http-body = { workspace = true }
http = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Web framework
axum = { workspace = true }

[build-dependencies]
connectrpc-build = { path = "../../connectrpc-build" }

[lints]
workspace = true
