[package]
name = "wasm-client-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
connectrpc = { path = "../../connectrpc", default-features = false, features = ["gzip"] }

# Protobuf
buffa = { workspace = true }
buffa-types = { workspace = true }

# Serialization (for generated message types)
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Async
futures = { workspace = true }

# Wasm/browser bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
connectrpc-build = { path = "../../connectrpc-build" }

[lints]
workspace = true
